--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body tracingopacity="100">
 <div id="base930">
-  <div id="inicio_superior">POSADA BOUTIQUE LA BARRICA . LAS PAREDES . SAN RAFAEL . MENDOZA </div>
+  <div id="inicio_superior">POSADA BOUTIQUE . LAS PAREDES . SAN RAFAEL . MENDOZA </div>
   <div id="inicio_rotacion">
     <ul id="slide" class="innerfade" style="position: relative; height: 1em;">
       <li style="z-index: 5; position: absolute; display: none;"><a href="home.html"><img src="images/rotacion1.jpg" width="930" height="328" border="0"></a></li>
