--- a/home.html
+++ b/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0042)http://www.posadalamatera.com.ar/home.html -->
+<!-- saved from url=(0042)/home.html -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>: La Matera . Posada de Campo . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
+<title>: La Barrica . Posada Boutique . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
 <meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
 <meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
 <script src="./home_files/jquery-1.8.0.js.descarga" type="text/javascript"></script>
@@ -20,48 +20,46 @@
  );
  });
  </script>
- <link href="./home_files/estilos.css" rel="stylesheet" type="text/css"><link href="./home_files/menus.css" rel="stylesheet" type="text/css"></head>
+ <link href="css/estilos.css" rel="stylesheet" type="text/css">
+ <link href="css/menus.css" rel="stylesheet" type="text/css"></head>
  
 
 
 <body tracingopacity="100">
 <div id="base930">
+  <div class="logo">La Barrica</div>
   <div id="interior_superior">
-    <div id="isologo"><a href="http://www.posadalamatera.com.ar/index.html"><img src="./home_files/lamatera_iso_logo.jpg" alt="LA MATERA POSADA DE CAMPO EN SAN RAFAEL" width="200" height="100" border="0"></a></div>
-    <div id="brujula"><a href="http://www.posadalamatera.com.ar/ubicacion.html"><img src="./home_files/brujula.jpg" alt="Ubicacion de La Matera" width="80" height="100" border="0"></a></div>
-    <div id="camara"><a href="http://www.posadalamatera.com.ar/album.html"><img src="./home_files/camara.jpg" alt="Album de fotos" width="84" height="100" border="0"></a></div>
-  </div>
   <div id="interior_botonera">
   <ul class="menu">
- <li><a href="http://www.posadalamatera.com.ar/home.html"><span class="activo">HOME</span></a></li>
- <li><a href="http://www.posadalamatera.com.ar/posada.html">POSADA</a>
-</li><li><a href="http://www.posadalamatera.com.ar/servicios.html">SERVICIOS</a>
-</li><li><a href="http://www.posadalamatera.com.ar/finca.html">FINCA</a>
+ <li><a href="home.html"><span class="activo">HOME</span></a></li>
+ <li><a href="posada.html">POSADA</a>
+</li><li><a href="servicios.html">SERVICIOS</a>
+</li><li><a href="finca.html">FINCA</a>
 
  
- </li><li><a href="http://www.posadalamatera.com.ar/actividades.html">ACTIVIDADES</a>
+ </li><li><a href="actividades.html">ACTIVIDADES</a>
  <ul>
- <li><a href="http://www.posadalamatera.com.ar/cabalgatas.html">Cabalgatas</a></li>
- <li><a href="http://www.posadalamatera.com.ar/bicicleteada.html">Bicicleteada</a></li>
- <li><a href="http://www.posadalamatera.com.ar/lagosysol.html">Lagos y sol</a></li>
- <li><a href="http://www.posadalamatera.com.ar/golf.html">GOLF</a></li>
- <li><a href="http://www.posadalamatera.com.ar/bodegasboutique.html">Bodegas boutique</a></li>
- <li><a href="http://www.posadalamatera.com.ar/rafting.html">Rafting</a></li>
- <li><a href="http://www.posadalamatera.com.ar/trekking.html">Trekking</a></li>
- <li><a href="http://www.posadalamatera.com.ar/tirolesayrappel.html">Tirolesa y Rappel</a></li>
+ <li><a href="cabalgatas.html">Cabalgatas</a></li>
+ <li><a href="bicicleteada.html">Bicicleteada</a></li>
+ <li><a href="lagosysol.html">Lagos y sol</a></li>
+ <li><a href="golf.html">GOLF</a></li>
+ <li><a href="bodegasboutique.html">Bodegas boutique</a></li>
+ <li><a href="rafting.html">Rafting</a></li>
+ <li><a href="trekking.html">Trekking</a></li>
+ <li><a href="tirolesayrappel.html">Tirolesa y Rappel</a></li>
  </ul>
  </li>
- <li><a href="http://www.posadalamatera.com.ar/tarifasyconsultas.html">TARIFAS</a></li>
- <li><a href="http://www.posadalamatera.com.ar/nosotros.html">NOSOTROS</a></li>
- <li><a href="http://www.posadalamatera.com.ar/tarifasyconsultas.html">CONTACTOS</a></li>
- <li><a href="http://www.posadalamatera.com.ar/ubicacion.html">COMO LLEGAR</a></li>
- <li><a href="http://www.posadalamatera.com.ar/album.html">ALBUM</a></li>
+ <li><a href="tarifasyconsultas.html">TARIFAS</a></li>
+ <li><a href="nosotros.html">NOSOTROS</a></li>
+ <li><a href="tarifasyconsultas.html">CONTACTOS</a></li>
+ <li><a href="ubicacion.html">COMO LLEGAR</a></li>
+ <li><a href="album.html">ALBUM</a></li>
  </ul>
   
   </div>
   <div id="interior_contenido">
 <div id="contenido_texto">
-  <p>Bienvenidos a Posada La Matera.<br>
+  <p>Bienvenidos a Posada Boutique La Barrica.<br>
     Un lugar tranquilo donde sentir &nbsp;la vida en el campo. <br>
     Para quedarte a disfrutar o como punto de  partida de tus excursiones&nbsp; y paseos por  la&nbsp; zona.<br>
     Mañanas brillantes y desayuno de campo. &nbsp;&nbsp;Pileta  rodeada de verde. &nbsp;&nbsp;Lugares para leer o dormir bajo un árbol.<br>
@@ -69,7 +67,7 @@
     Un fogón en la noche estrellada… y canto  de ranas…    … &nbsp;A un paso de sitios de gran belleza turística. </p>
 </div>
 <div id="contenido_foto">
-  <p><img src="./home_files/home.jpg" width="741" height="243"></p>
+  <p><img src="images/home.jpg" width="741" height="273"></p>
 </div>
   </div>
 </div>
