--- a/home.html
+++ b/home.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0042)/home.html -->
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<!DOCTYPE html>
+<html lang="es">
+<head><meta charset="UTF-8">
 <title>: La Barrica . Posada Boutique . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
 <meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
 <meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
-<script src="./home_files/jquery-1.8.0.js.descarga" type="text/javascript"></script>
+<script src="js/jquery-1.8.0.js.descarga" type="text/javascript"></script>
 <script type="text/javascript">
+ 
  $(document).ready(function() {
  $('ul li:has(ul)').hover(
  function(e)
@@ -22,9 +22,6 @@
  </script>
  <link href="css/estilos.css" rel="stylesheet" type="text/css">
  <link href="css/menus.css" rel="stylesheet" type="text/css"></head>
- 
-
-
 <body tracingopacity="100">
 <div id="base930">
   <div class="logo">La Barrica</div>
