--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0033)http://www.posadalamatera.com.ar/ -->
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<title>: La Barrica . Posada Boutique . San Rafael .  Alojamiento Turistico</title>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<title>La Barrica . Posada Boutique . San Rafael .  Alojamiento Turistico</title>
 <meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
 <meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
-<script src="./index_files/jquery-1.8.0.js.descarga" type="text/javascript"></script>
-<script type="text/javascript" src="./index_files/jquery.innerfade.js.descarga"></script>
+<script src="js/jquery-1.8.0.js.descarga" type="text/javascript"></script>
+<script type="text/javascript" src="js/jquery.innerfade.js.descarga"></script>
 <script type="text/javascript">
 	   $(document).ready(
 				function(){
@@ -33,7 +33,7 @@
     </ul>
   </div>
   <div id="inicio_inferior">
-    <!--<p><img src="./images/logo.jpg" width="261" height="138"></p>-->
+  </br>
     <div class="logo">La Barrica</div>
     <div class="sublogo">POSADA BOUTIQUE</div>
     <p><br>
