--- a/posada.html
+++ b/posada.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
-<head><meta charset="UTF-8">
-<title>: La Barrica . Posada Boutique . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
-<meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir la vida en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
+<html lang="es"><head><meta charset="UTF-8">
+<title>: La Matera . Posada de Campo . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
+<meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
 <meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
 <script src="js/jquery-1.8.0.js.descarga" type="text/javascript"></script>
 <script type="text/javascript">
- 
  $(document).ready(function() {
  $('ul li:has(ul)').hover(
  function(e)
@@ -21,16 +19,20 @@
  });
  </script>
  <link href="css/estilos.css" rel="stylesheet" type="text/css">
- <link href="css/menus.css" rel="stylesheet" type="text/css"></head>
+ <link href="css/menus.css" rel="stylesheet" type="text/css">
+</head>
+ 
+
+
 <body tracingopacity="100">
 <div id="base930">
   <div id="interior_superior">
-  <div class="logo" style="margin-left: 80px;"><a href="index.html">La Barrica</a></div>
+      <div class="logo" style="margin-left: 80px;"><a href="index.html">La Barrica</a></div>
+  
   <div id="interior_botonera">
-    
-    <ul class="menu">
- <li><a href="home.html"><span class="activo">HOME</span></a></li>
- <li><a href="posada.html">POSADA</a>
+  <ul class="menu">
+ <li><a href="home.html">HOME</a>
+ </li><li><a href="posada.html"><span class="activo">POSADA</span></a>
 </li><li><a href="servicios.html">SERVICIOS</a>
 </li><li><a href="finca.html">FINCA</a>
 
@@ -53,17 +55,16 @@
  <li><a href="ubicacion.html">COMO LLEGAR</a></li>
  <li><a href="album.html">ALBUM</a></li>
  </ul>
-  
   </div>
   <div id="interior_contenido">
 <div id="contenido_texto">
-  <p>Bienvenidos a Posada Boutique La Barrica.Un lugar tranquilo donde sentir la vida en San Rafael.
-    Para quedarte a disfrutar o como punto de  partida de tus excursiones y paseos por la zona.</p>
-    <p>Mañanas brillantes y desayuno de campo.Pileta  rodeada de verde. Atardeceres rosados al pie de las  montañas. 
-    Un fogón en la noche estrellada y canto  de ranas.A un paso de sitios de gran belleza turística. </p>
+  <p>Posada La Barrica es un hotel boutique de campo atendido por sus dueños. Un lugar donde combinamos campo, calidad y confort. Posee   tres habitaciones con sus modernos baños. &nbsp;Está ubicada en un lugar  estratégico como punto de partida para tus actividades, entre el centro y el  Cañón del Atuel.    </p>
+<p>Todas  las mañanas nos encontrarán guiándolos en lo que necesiten y sirviendo sus  desayunos: </p>
+  <p>Jugo  recién exprimido, frutas de estación, pan y facturas de campo, dulces caseros,  distintos fiambres&nbsp;&nbsp;de la zona, yogurt y cereales, alguna torta  casera recién horneada, café, leche, infusiones…  </p>
+  <p>Esperamos  que puedan llevarse después de su estadía un poco de la calma y la belleza que  nosotros descubrimos.</p>
 </div>
 <div id="contenido_foto">
-  <p><img src="images/home.jpg" width="741" height="273"></p>
+  <p><img src="images/posada.jpg" width="741" height="243"></p>
 </div>
   </div>
 </div>
