--- a/ubicacion.html
+++ b/ubicacion.html
@@ -63,7 +63,7 @@
 <body onload="initialize()">
 <div id="base930">
   <div id="interior_superior">
-    <div class="logo">La Barrica</div>
+  <div class="logo" style="margin-left: 80px;"><a href="index.html">La Barrica</a></div>
   <div id="interior_botonera">
   <ul class="menu">
  <li><a href="home.html">HOME</a></li>
@@ -93,6 +93,7 @@
   
   </div>
   <div id="interior_contenido">
+    
     <div id="contenido_texto" style="height:75px">
       <div id="izquierda">
         <ul>
@@ -107,8 +108,6 @@
         <p><strong>Teléfono: </strong>
         Argentina: 2604 536161/660454</br>
         Exterior: +5492604 536161/660454 </br>LLlama para reservar ahora mismo</p>
-        <p><strong>GPS</strong>: 
-        Lat <span jstcache="86" jsvars="$title:i.title;$laddr:m.laddr;$addrurl:i.addressUrl;$features:features;"><span dir="ltr" jstcache="117" jsdisplay="$title||!$laddr||!$addrurl" jsattrs="dir:bidiDir($addrline, true);class:m&amp;&amp;m.ss&amp;&amp;has(&#39;m.ss.status&#39;)&amp;&amp;m.ss.status==13?&#39;unver&#39;:&#39;&#39;;" jscontent="$addrline">-34° 41' 7.07" <strong>-</strong></span></span>        Lon-68° 25' 36.83"</p>
       </div>
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.901654841472!2d-68.35531328493464!3d-34.58549518046428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967908fa645a998d%3A0xa607cbf68a305016!2sOrtubia%2C+5600+San+Rafael%2C+Mendoza%2C+Argentina!5e1!3m2!1sen!2sus!4v1524256011116" width="720" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
