--- a/home.html
+++ b/home.html
@@ -1,72 +1,113 @@
 <!DOCTYPE html>
 <html lang="es">
-<head><meta charset="UTF-8">
-<title>: La Barrica . Posada Boutique . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
-<meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir la vida en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
+<head>
+<meta charset="UTF-8">
+<title>La Barrica . Posada Boutique . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
+<meta name="Description" content="Bienvenidos a Posada Boutique La Barrica, Un lugar tranquilo donde sentir la vida en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
 <meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
 <script src="js/jquery-1.8.0.js.descarga" type="text/javascript"></script>
 <script type="text/javascript">
- 
- $(document).ready(function() {
- $('ul li:has(ul)').hover(
- function(e)
- {
- $(this).find('ul').css({display: "block"});
- },
- function(e)
- {
- $(this).find('ul').css({display: "none"});
- }
- );
- });
- </script>
- <link href="css/estilos.css" rel="stylesheet" type="text/css">
- <link href="css/menus.css" rel="stylesheet" type="text/css"></head>
+
+    $(document).ready(function () {
+      $('ul li:has(ul)').hover(
+        function (e) {
+          $(this).find('ul').css({ display: "block" });
+        },
+        function (e) {
+          $(this).find('ul').css({ display: "none" });
+        }
+      );
+    });
+  </script>
+  <link href="css/estilos.css" rel="stylesheet" type="text/css">
+  <link href="css/menus.css" rel="stylesheet" type="text/css">
+</head>
+
 <body tracingopacity="100">
-<div id="base930">
-  <div id="interior_superior">
-  <div class="logo" style="margin-left: 80px;"><a href="index.html">La Barrica</a></div>
-  <div id="interior_botonera">
-    
-    <ul class="menu">
- <li><a href="home.html"><span class="activo">HOME</span></a></li>
- <li><a href="posada.html">POSADA</a>
-</li><li><a href="servicios.html">SERVICIOS</a>
-</li><li><a href="finca.html">FINCA</a>
-
- 
- </li><li><a href="actividades.html">ACTIVIDADES</a>
- <ul>
- <li><a href="cabalgatas.html">Cabalgatas</a></li>
- <li><a href="bicicleteada.html">Bicicleteada</a></li>
- <li><a href="lagosysol.html">Lagos y sol</a></li>
- <li><a href="golf.html">GOLF</a></li>
- <li><a href="bodegasboutique.html">Bodegas boutique</a></li>
- <li><a href="rafting.html">Rafting</a></li>
- <li><a href="trekking.html">Trekking</a></li>
- <li><a href="tirolesayrappel.html">Tirolesa y Rappel</a></li>
- </ul>
- </li>
- <li><a href="tarifasyconsultas.html">TARIFAS</a></li>
- <li><a href="nosotros.html">NOSOTROS</a></li>
- <li><a href="tarifasyconsultas.html">CONTACTOS</a></li>
- <li><a href="ubicacion.html">COMO LLEGAR</a></li>
- <li><a href="album.html">ALBUM</a></li>
- </ul>
-  
-  </div>
-  <div id="interior_contenido">
-<div id="contenido_texto">
-  <p>Bienvenidos a Posada Boutique La Barrica.Un lugar tranquilo donde sentir la vida en San Rafael.
-    Para quedarte a disfrutar o como punto de  partida de tus excursiones y paseos por la zona.</p>
-    <p>Mañanas brillantes y desayuno de campo.Pileta  rodeada de verde. Atardeceres rosados al pie de las  montañas. 
-    Un fogón en la noche estrellada y canto  de ranas.A un paso de sitios de gran belleza turística. </p>
-</div>
-<div id="contenido_foto">
-  <p><img src="images/home.jpg" width="741" height="273"></p>
-</div>
-  </div>
-</div>
+  <div id="base930">
+    <div id="interior_superior">
+      <div class="logo" style="margin-left: 80px;">
+        <a href="index.html">La Barrica</a>
+      </div>
+      <div id="interior_botonera">
+        <ul class="menu">
+          <li>
+            <a href="home.html">
+              <span class="activo">HOME</span>
+            </a>
+          </li>
+          <li>
+            <a href="posada.html">POSADA</a>
+          </li>
+          <li>
+            <a href="servicios.html">SERVICIOS</a>
+          </li>
+          <li>
+            <a href="finca.html">FINCA</a>
 
 
-</body></html>
+          </li>
+          <li>
+            <a href="actividades.html">ACTIVIDADES</a>
+            <ul>
+              <li>
+                <a href="cabalgatas.html">Cabalgatas</a>
+              </li>
+              <li>
+                <a href="bicicleteada.html">Bicicleteada</a>
+              </li>
+              <li>
+                <a href="lagosysol.html">Lagos y sol</a>
+              </li>
+              <li>
+                <a href="golf.html">GOLF</a>
+              </li>
+              <li>
+                <a href="bodegasboutique.html">Bodegas boutique</a>
+              </li>
+              <li>
+                <a href="rafting.html">Rafting</a>
+              </li>
+              <li>
+                <a href="trekking.html">Trekking</a>
+              </li>
+              <li>
+                <a href="tirolesayrappel.html">Tirolesa y Rappel</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="tarifasyconsultas.html">TARIFAS</a>
+          </li>
+          <li>
+            <a href="nosotros.html">NOSOTROS</a>
+          </li>
+          <li>
+            <a href="tarifasyconsultas.html">CONTACTOS</a>
+          </li>
+          <li>
+            <a href="ubicacion.html">COMO LLEGAR</a>
+          </li>
+          <li>
+            <a href="album.html">ALBUM</a>
+          </li>
+        </ul>
+
+      </div>
+      <div id="interior_contenido">
+        <div id="contenido_texto">
+          <p>Bienvenidos a Posada Boutique La Barrica.Un lugar tranquilo donde sentir la vida en San Rafael. Para quedarte a
+            disfrutar o como punto de partida de tus excursiones y paseos por la zona.</p>
+          <p>Mañanas brillantes y desayuno de campo.Pileta rodeada de verde. Atardeceres rosados al pie de las montañas. Un
+            fogón en la noche estrellada y canto de ranas.A un paso de sitios de gran belleza turística. </p>
+        </div>
+        <div id="contenido_foto">
+          <p>
+            <img src="images/home.jpg" width="741" height="273">
+          </p>
+        </div>
+      </div>
+    </div>
+</body>
+
+</html>
