--- a/posada.html
+++ b/posada.html
@@ -1,73 +1,120 @@
 <!DOCTYPE html>
-<html lang="es"><head><meta charset="UTF-8">
-<title>: La Matera . Posada de Campo . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
-<meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
-<meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
-<script src="js/jquery-1.8.0.js.descarga" type="text/javascript"></script>
-<script type="text/javascript">
- $(document).ready(function() {
- $('ul li:has(ul)').hover(
- function(e)
- {
- $(this).find('ul').css({display: "block"});
- },
- function(e)
- {
- $(this).find('ul').css({display: "none"});
- }
- );
- });
- </script>
- <link href="css/estilos.css" rel="stylesheet" type="text/css">
- <link href="css/menus.css" rel="stylesheet" type="text/css">
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8">
+  <title>La Barrica . Posada Boutique . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
+  <meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
+  <meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
+  <script src="js/jquery-1.8.0.js.descarga" type="text/javascript"></script>
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $('ul li:has(ul)').hover(
+        function (e) {
+          $(this).find('ul').css({ display: "block" });
+        },
+        function (e) {
+          $(this).find('ul').css({ display: "none" });
+        }
+      );
+    });
+  </script>
+  <link href="css/estilos.css" rel="stylesheet" type="text/css">
+  <link href="css/menus.css" rel="stylesheet" type="text/css">
 </head>
- 
+
 
 
 <body tracingopacity="100">
-<div id="base930">
-  <div id="interior_superior">
-      <div class="logo" style="margin-left: 80px;"><a href="index.html">La Barrica</a></div>
-  
-  <div id="interior_botonera">
-  <ul class="menu">
- <li><a href="home.html">HOME</a>
- </li><li><a href="posada.html"><span class="activo">POSADA</span></a>
-</li><li><a href="servicios.html">SERVICIOS</a>
-</li><li><a href="finca.html">FINCA</a>
+  <div id="base930">
+    <div id="interior_superior">
+      <div class="logo" style="margin-left: 80px;">
+        <a href="index.html">La Barrica</a>
+      </div>
 
- 
- </li><li><a href="actividades.html">ACTIVIDADES</a>
- <ul>
- <li><a href="cabalgatas.html">Cabalgatas</a></li>
- <li><a href="bicicleteada.html">Bicicleteada</a></li>
- <li><a href="lagosysol.html">Lagos y sol</a></li>
- <li><a href="golf.html">GOLF</a></li>
- <li><a href="bodegasboutique.html">Bodegas boutique</a></li>
- <li><a href="rafting.html">Rafting</a></li>
- <li><a href="trekking.html">Trekking</a></li>
- <li><a href="tirolesayrappel.html">Tirolesa y Rappel</a></li>
- </ul>
- </li>
- <li><a href="tarifasyconsultas.html">TARIFAS</a></li>
- <li><a href="nosotros.html">NOSOTROS</a></li>
- <li><a href="tarifasyconsultas.html">CONTACTOS</a></li>
- <li><a href="ubicacion.html">COMO LLEGAR</a></li>
- <li><a href="album.html">ALBUM</a></li>
- </ul>
-  </div>
-  <div id="interior_contenido">
-<div id="contenido_texto">
-  <p>Posada La Barrica es un hotel boutique de campo atendido por sus dueños. Un lugar donde combinamos campo, calidad y confort. Posee   tres habitaciones con sus modernos baños. &nbsp;Está ubicada en un lugar  estratégico como punto de partida para tus actividades, entre el centro y el  Cañón del Atuel.    </p>
-<p>Todas  las mañanas nos encontrarán guiándolos en lo que necesiten y sirviendo sus  desayunos: </p>
-  <p>Jugo  recién exprimido, frutas de estación, pan y facturas de campo, dulces caseros,  distintos fiambres&nbsp;&nbsp;de la zona, yogurt y cereales, alguna torta  casera recién horneada, café, leche, infusiones…  </p>
-  <p>Esperamos  que puedan llevarse después de su estadía un poco de la calma y la belleza que  nosotros descubrimos.</p>
-</div>
-<div id="contenido_foto">
-  <p><img src="images/posada.jpg" width="741" height="243"></p>
-</div>
-  </div>
-</div>
+      <div id="interior_botonera">
+        <ul class="menu">
+          <li>
+            <a href="home.html">HOME</a>
+          </li>
+          <li>
+            <a href="posada.html">
+              <span class="activo">POSADA</span>
+            </a>
+          </li>
+          <li>
+            <a href="servicios.html">SERVICIOS</a>
+          </li>
+          <li>
+            <a href="finca.html">FINCA</a>
 
 
-</body></html>
+          </li>
+          <li>
+            <a href="actividades.html">ACTIVIDADES</a>
+            <ul>
+              <li>
+                <a href="cabalgatas.html">Cabalgatas</a>
+              </li>
+              <li>
+                <a href="bicicleteada.html">Bicicleteada</a>
+              </li>
+              <li>
+                <a href="lagosysol.html">Lagos y sol</a>
+              </li>
+              <li>
+                <a href="golf.html">GOLF</a>
+              </li>
+              <li>
+                <a href="bodegasboutique.html">Bodegas boutique</a>
+              </li>
+              <li>
+                <a href="rafting.html">Rafting</a>
+              </li>
+              <li>
+                <a href="trekking.html">Trekking</a>
+              </li>
+              <li>
+                <a href="tirolesayrappel.html">Tirolesa y Rappel</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="tarifasyconsultas.html">TARIFAS</a>
+          </li>
+          <li>
+            <a href="nosotros.html">NOSOTROS</a>
+          </li>
+          <li>
+            <a href="tarifasyconsultas.html">CONTACTOS</a>
+          </li>
+          <li>
+            <a href="ubicacion.html">COMO LLEGAR</a>
+          </li>
+          <li>
+            <a href="album.html">ALBUM</a>
+          </li>
+        </ul>
+      </div>
+      <div id="interior_contenido">
+        <div id="contenido_texto">
+          <p>Posada La Barrica es un hotel boutique de campo atendido por sus dueños. Un lugar donde combinamos campo, calidad
+            y confort. Posee tres habitaciones con sus modernos baños. &nbsp;Está ubicada en un lugar estratégico como punto
+            de partida para tus actividades, entre el centro y el Cañón del Atuel. </p>
+          <p>Todas las mañanas nos encontrarán guiándolos en lo que necesiten y sirviendo sus desayunos: </p>
+          <p>Jugo recién exprimido, frutas de estación, pan y facturas de campo, dulces caseros, distintos fiambres&nbsp;&nbsp;de
+            la zona, yogurt y cereales, alguna torta casera recién horneada, café, leche, infusiones… </p>
+          <p>Esperamos que puedan llevarse después de su estadía un poco de la calma y la belleza que nosotros descubrimos.</p>
+        </div>
+        <div id="contenido_foto">
+          <p>
+            <img src="images/posada.jpg" width="741" height="243">
+          </p>
+        </div>
+      </div>
+    </div>
+
+
+</body>
+
+</html>
