--- a/index.html
+++ b/index.html
@@ -1,45 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>La Barrica . Posada Boutique . San Rafael .  Alojamiento Turistico</title>
-<meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
-<meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
-<script src="js/jquery-1.8.0.js.descarga" type="text/javascript"></script>
-<script type="text/javascript" src="js/jquery.innerfade.js.descarga"></script>
-<script type="text/javascript">
-	   $(document).ready(
-				function(){
-					$('#slide').innerfade({
-						speed: 'slow',
-						timeout: 5000,
-						type: 'sequence',
-						containerheight: '1em'
-					});
-			});
-</script>
-<link href="./css/estilos.css" rel="stylesheet" type="text/css"></head>
+  <meta charset="UTF-8">
+  <title>La Barrica . Posada Boutique . San Rafael . Alojamiento Turistico</title>
+  <meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
+  <meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
+  <script src="js/jquery-1.8.0.js.descarga" type="text/javascript"></script>
+  <script type="text/javascript" src="js/jquery.innerfade.js.descarga"></script>
+  <script type="text/javascript">
+    $(document).ready(
+      function () {
+        $('#slide').innerfade({
+          speed: 'slow',
+          timeout: 5000,
+          type: 'sequence',
+          containerheight: '1em'
+        });
+      });
+  </script>
+  <link href="./css/estilos.css" rel="stylesheet" type="text/css">
+</head>
 
 <body tracingopacity="100">
-<div id="base930">
-  <div id="inicio_superior">POSADA BOUTIQUE . LAS PAREDES . SAN RAFAEL . MENDOZA</div>
-  <div id="inicio_rotacion">
-    <ul id="slide" class="innerfade" style="position: relative; height: 1em;">
-      <li style="z-index: 5; position: absolute; display: none;"><a href="home.html"><img src="images/rotacion1.jpg" width="930" height="328" border="0"></a></li>
-      <li style="z-index: 4; position: absolute; display: none;"><a href="home.html"><img src="images/rotacion2.jpg" width="930" height="328" border="0"></a></li>
-      <li style="z-index: 3; position: absolute; display: list-item;"><a href="home.html"><img src="images/rotacion3.jpg" width="930" height="328" border="0"></a></li>
-      <li style="z-index: 2; position: absolute; display: none;"><a href="home.html"><img src="images/rotacion4.jpg" width="930" height="328" border="0"></a></li>
-      <li style="z-index: 1; position: absolute; display: none;"><a href="home.html"><img src="images/rotacion5.jpg" width="930" height="328" border="0"></a></li>
-    </ul>
+  <div id="base930">
+    <div id="inicio_superior">POSADA BOUTIQUE . LAS PAREDES . SAN RAFAEL . MENDOZA</div>
+    <div id="inicio_rotacion">
+      <ul id="slide" class="innerfade" style="position: relative; height: 1em;">
+        <li style="z-index: 5; position: absolute; display: none;">
+          <a href="home.html">
+            <img src="images/rotacion1.jpg" width="930" height="328" border="0">
+          </a>
+        </li>
+        <li style="z-index: 4; position: absolute; display: none;">
+          <a href="home.html">
+            <img src="images/rotacion2.jpg" width="930" height="328" border="0">
+          </a>
+        </li>
+        <li style="z-index: 3; position: absolute; display: list-item;">
+          <a href="home.html">
+            <img src="images/rotacion3.jpg" width="930" height="328" border="0">
+          </a>
+        </li>
+        <li style="z-index: 2; position: absolute; display: none;">
+          <a href="home.html">
+            <img src="images/rotacion4.jpg" width="930" height="328" border="0">
+          </a>
+        </li>
+        <li style="z-index: 1; position: absolute; display: none;">
+          <a href="home.html">
+            <img src="images/rotacion5.jpg" width="930" height="328" border="0">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div id="inicio_inferior">
+      </br>
+      <div class="logo">La Barrica</div>
+      <div class="sublogo">POSADA BOUTIQUE</div>
+      <p>
+        <br>
+        <a href="home.html">INGRESAR</a>
+      </p>
+    </div>
   </div>
-  <div id="inicio_inferior">
-  </br>
-    <div class="logo" >La Barrica</div>
-    <div class="sublogo">POSADA BOUTIQUE</div>
-    <p><br>
-    <a href="home.html">INGRESAR</a></p>
-  </div>
-</div>
 
 
-</body></html>
+</body>
+
+</html>
