--- a/tarifasyconsultas.html
+++ b/tarifasyconsultas.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<html lang="es">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" type="text/css" href="./contactos_files/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="./contactos_files/bootstrap-theme.min.css">
-  <link rel="stylesheet" type="text/css" href="./contactos_files/jquery-ui.css">
-  <script type="text/javascript" src="./contactos_files/bootstrap.min.js.descarga"></script>
-  <script type="text/javascript" src="./contactos_files/jquery-ui-1.10.0.min.js.descarga"></script>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+  <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+  <script type="text/javascript" src="js/bootstrap.min.js.descarga"></script>
+  <script type="text/javascript" src="js/jquery-ui-1.10.0.min.js.descarga"></script>
 
-  <title>: La Matera . Posada de Campo . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
-  <meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
-  <meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
-  <script src="./contactos_files/WidgetEmbed-excellent" async=""></script>
-  <script src="./contactos_files/jquery-1.8.0.js.descarga" type="text/javascript"></script>
+  <title>: La Barrica . Posada Boutique . San Rafael . Alojamiento Rural . Alojamiento Turistico</title>
+  <meta name="Description" content="Bienvenidos a Posada Boutique  La Barrica, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno Boutique.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
+  <meta name="Keywords" content=":  Posada La Barrica,  Posada Boutique La Barrica, La Barrica, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada Boutique, Finca, Estancia Rural">
+  <script src="js/WidgetEmbed-excellent" async=""></script>
+  <script src="js/jquery-1.8.0.js.descarga" type="text/javascript"></script>
   <script type="text/javascript">
     $(document).ready(function () {
       $('ul li:has(ul)').hover(
@@ -78,7 +77,7 @@
     }
   </style>
   <link rel="stylesheet" href="data:text/css,@import%20url%28%27%20https%3A//static.tacdn.com/css2/t4b_widget_excellent-v23901640696b.css%20%27%29%3B">
-  <script type="text/javascript" src="./contactos_files/cdswidgets_min-c-v2395114504b.js.descarga"></script>
+  <script type="text/javascript" src="js/cdswidgets_min-c-v2395114504b.js.descarga"></script>
 </head>
 
 
@@ -96,14 +95,6 @@
           </li>
           <li>
             <a href="posada.html">POSADA</a>
-          </li>
-          <li>
-            <a href="servicios.html">SERVICIOS</a>
-          </li>
-          <li>
-            <a href="finca.html">FINCA</a>
-
-
           </li>
           <li>
             <a href="actividades.html">ACTIVIDADES</a>
@@ -218,108 +209,24 @@
               <div class="body"> </div>
             </form>
             <p>
-              <strong>Maria Laura Sanz</strong>
+              <strong>Posada Boutique La Barrica</strong>
             </p>
-            <p> Desde Argentina: 0260 154686435
-              <br> o 260 4623944
+            <p> Desde Argentina: 260415536161
+              <br> o 260415660454
             </p>
-            <p>Desde exterior: 00 54 9 260 4686435</p>
-            <p>contacto@posadalamatera.com.ar
+            <p>Desde exterior: +5492604536161/+5492604660454</p>
+            <p>contacto@posadaboutiquelabarrica.com.ar
             </p>
             <p>
-              <br> * Posada La Matera está pensada para adultos, o jóvenes mayores de 10 años.
+              <br> * Posada La Barrica está pensada para adultos, o jóvenes mayores de 10 años.
               <br>
               <br>
             </p>
           </div>
-          <div id="tarifas">
-            <p>
-              <strong> RESERVAS ONLINE</strong>
-            </p>
-            <div id="wcontainer">
-              <div class="dh-container" id="dh_container">
-                <div class="clearfix">
-                  <div class="pull-left">
-                    <div class="form-group">
-                      <label for="dh_startInput">Llegada</label>
-                      <input type="text" class="form-control hasDatepicker" id="dh_startInput"> </div>
-                  </div>
-                  <div class="pull-left">
-                    <div class="form-group">
-                      <label for="dh_endInput">Salida</label>
-                      <input type="text" class="form-control hasDatepicker" id="dh_endInput"> </div>
-                  </div>
-                  <div class="pull-left">
-                    <div class="form-group">
-                      <label>Adultos</label>
-                      <select class="form-control" id="dh_adultsInput">
-                        <option value="1">1</option>
-                        <option value="2" selected="">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="pull-left" id="dh_childrenDiv">
-                    <div class="form-group">
-                      <label>Menores
-                        <small style="font-size:75% !important;">(
-                          <span>0</span>-
-                          <span>11</span>)</small>
-                      </label>
-                      <select class="form-control" id="dh_childrenInput">
-                        <option value="0">0</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="pull-left" id="dh_infantsDiv">
-                    <div class="form-group">
-                      <label>Infantes
-                        <small style="font-size:75% !important;">(&lt;
-                          <span>0</span>)</small>
-                      </label>
-                      <select class="form-control" id="dh_infantsInput">
-                        <option value="0">0</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="pull-left">
-                    <div class="form-group">
-                      <button type="button" class="btn btn-custom btn-block" id="dh_fetchButton">Buscar</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <script src="./contactos_files/jquery-1.11.3.min.js.descarga" type="text/javascript"></script>
-            <script src="./contactos_files/jquery-ui-1.10.0.min.js.descarga" type="text/javascript"></script>
-            <script src="./contactos_files/API.aspx" type="text/javascript"></script>
+          </div>
+            <script src="js/jquery-1.11.3.min.js.descarga" type="text/javascript"></script>
+            <script src="js/jquery-ui-1.10.0.min.js.descarga" type="text/javascript"></script>
+            <script src="js/API.aspx" type="text/javascript"></script>
             <script type="text/javascript">
               $(document).ready(function () {
                 $.fn.dhsify.defaults.lang = 'es';
@@ -329,163 +236,8 @@
             </script>
             <p></p>
           </div>
-
-        </div>
-        <div id="contenido_foto">
-          <p style="float:left; margin-right:10px">
-            <img src="./contactos_files/contacto.jpg" width="490" height="241">
-          </p>
-          
         </div>
       </div>
-    </div>
-
-
-    <div id="ui-datepicker-div" class="ui-datepicker ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
-      <table class="ui-datepicker-calendar">
-        <thead>
-          <tr>
-            <th>
-              <span title="Lunes">Lu</span>
-            </th>
-            <th>
-              <span title="Martes">Ma</span>
-            </th>
-            <th>
-              <span title="Miércoles">Mi</span>
-            </th>
-            <th>
-              <span title="Jueves">Ju</span>
-            </th>
-            <th>
-              <span title="Viernes">Vi</span>
-            </th>
-            <th class="ui-datepicker-week-end">
-              <span title="Sábado">Sa</span>
-            </th>
-            <th class="ui-datepicker-week-end">
-              <span title="Domingo">Do</span>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-week-end ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-week-end ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">1</span>
-            </td>
-          </tr>
-          <tr>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">2</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">3</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">4</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">5</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">6</span>
-            </td>
-            <td class=" ui-datepicker-week-end ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">7</span>
-            </td>
-            <td class=" ui-datepicker-week-end ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">8</span>
-            </td>
-          </tr>
-          <tr>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">9</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">10</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">11</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">12</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">13</span>
-            </td>
-            <td class=" ui-datepicker-week-end ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">14</span>
-            </td>
-            <td class=" ui-datepicker-week-end ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">15</span>
-            </td>
-          </tr>
-          <tr>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">16</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">17</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">18</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled ">
-              <span class="ui-state-default">19</span>
-            </td>
-            <td class=" ui-datepicker-unselectable ui-state-disabled  ui-datepicker-today">
-              <span class="ui-state-default">20</span>
-            </td>
-            <td class=" ui-datepicker-week-end ui-datepicker-days-cell-over  ui-datepicker-current-day" data-handler="selectDay"
-              data-event="click" data-month="3" data-year="2018">
-              <a class="ui-state-default ui-state-active ui-state-hover" href="tarifasyconsultas.html#">21</a>
-            </td>
-            <td class=" ui-datepicker-week-end " data-handler="selectDay" data-event="click" data-month="3" data-year="2018">
-              <a class="ui-state-default" href="tarifasyconsultas.html#">22</a>
-            </td>
-          </tr>
-          <tr>
-            <td class=" " data-handler="selectDay" data-event="click" data-month="3" data-year="2018">
-              <a class="ui-state-default" href="tarifasyconsultas.html#">23</a>
-            </td>
-            <td class=" " data-handler="selectDay" data-event="click" data-month="3" data-year="2018">
-              <a class="ui-state-default" href="tarifasyconsultas.html#">24</a>
-            </td>
-            <td class=" " data-handler="selectDay" data-event="click" data-month="3" data-year="2018">
-              <a class="ui-state-default" href="tarifasyconsultas.html#">25</a>
-            </td>
-            <td class=" " data-handler="selectDay" data-event="click" data-month="3" data-year="2018">
-              <a class="ui-state-default" href="tarifasyconsultas.html#">26</a>
-            </td>
-            <td class=" " data-handler="selectDay" data-event="click" data-month="3" data-year="2018">
-              <a class="ui-state-default" href="tarifasyconsultas.html#">27</a>
-            </td>
-            <td class=" ui-datepicker-week-end " data-handler="selectDay" data-event="click" data-month="3" data-year="2018">
-              <a class="ui-state-default" href="tarifasyconsultas.html#">28</a>
-            </td>
-            <td class=" ui-datepicker-week-end " data-handler="selectDay" data-event="click" data-month="3" data-year="2018">
-              <a class="ui-state-default" href="tarifasyconsultas.html#">29</a>
-            </td>
-          </tr>
-          <tr>
-            <td class=" " data-handler="selectDay" data-event="click" data-month="3" data-year="2018">
-              <a class="ui-state-default" href="tarifasyconsultas.html#">30</a>
-            </td>
-            <td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-week-end ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-            <td class=" ui-datepicker-week-end ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-          </tr>
-        </tbody>
-      </table>
     </div>
 </body>
 
