--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>La Barrica . Posada Boutique . San Rafael . Alojamiento Turistico</title>
+  <meta property="og:title" content="Posada Boutique La Barrica">
+  <meta property="og:description" content="San Rafael es una ciudad de la provincia de Mendoza que combina la majestuosidad de su naturaleza con grandes desarrollos industriales e infraestructuras hidroeléctricas, es el escenario perfecto para dar lugar a La Barrica Posada Boutique. Un espacio agradable, lujoso y cómodo que promueve un concepto vanguardista con las atenciones y amenidades de un dulce hogar.">
+  <meta property="og:image" content="images/home.jpg">
+  <meta property="og:url" content="index.htm">
   <meta name="Description" content="Bienvenidos a Posada de Campo  La Matera, Un lugar tranquilo donde sentir  la vida en el campo.en San Rafael, Provincia de Mendoza. Mañanas brillantes y desayuno de campo.   Pileta rodeada de verde.   Lugares para leer o dormir bajo un árbol. Atardeceres rosados al pie de las montañas y  Un fogón en la noche estrellada… y canto de ranas…">
   <meta name="Keywords" content=":  Posada La Matera,  Posada de Campo La Matera, La Matera, San Rafael, Mendoza, Alojamiento, Cabaña, Hotel, Apart, Turismo,  Valle Grande, Posada de Campo, Finca, Estancia Rural">
   <script src="js/jquery-1.8.0.js.descarga" type="text/javascript"></script>
