--- a/index.html
+++ b/index.html
@@ -68,7 +68,16 @@
     </div>
   </div>
 
+  <div class="fb-share-button" data-href="https://brakdag.github.io/labarrica/index.html" data-layout="button" data-size="small" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fbrakdag.github.io%2Flabarrica%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>
+  <div id="fb-root"></div>
 
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.12&appId=455637838206007&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 </body>
 
 </html>
