--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta property="og:description" content="San Rafael es una ciudad de la provincia de Mendoza que combina la majestuosidad de su naturaleza con grandes desarrollos industriales e infraestructuras hidroeléctricas, es el escenario perfecto para dar lugar a La Barrica Posada Boutique. Un espacio agradable, lujoso y cómodo que promueve un concepto vanguardista con las atenciones y amenidades de un dulce hogar.">
   <meta property="og:image" content="https://brakdag.github.io/labarrica/images/home.jpg">
   <meta property="og:url" content="https://brakdag.github.io/labarrica/index.htm">
+  <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Posada Boutique La Barrica">
   <meta name="twitter:description" content=" es el escenario perfecto para dar lugar a La Barrica Posada Boutique. Un espacio agradable, lujoso y cómodo que promueve un concepto vanguardista con las atenciones y amenidades de un dulce hogar.">
   <meta name="twitter:image" content="https://brakdag.github.io/labarrica/images/home.jpg">
@@ -75,7 +76,10 @@
     
   </div>
 
-  
+  <a class="twitter-share-button"
+  href="https://twitter.com/intent/tweet?url=https://brakdag.github.io/labarrica/index.html"
+  data-size="large">
+Tweet</a>
 
 
 </body>
